--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -2,14 +2,14 @@ add_executable(pingpongserver pingpongserver.cc)
 if(UNIX)
     find_package(Threads REQUIRED)
     target_link_libraries(pingpongserver pthread tyrantnet)
-else()
-    message(FATAL_ERROR, "only support linux now!")
-endif()
+else(WIN32)
+    target_link_libraries(pingpongserver ws2_32 tyrantnet)
+endif(UNIX)
 
 add_executable(pingpongclient pingpongclient.cc)
 if(UNIX)
     find_package(Threads REQUIRED)
     target_link_libraries(pingpongclient pthread tyrantnet)
 else()
-    message(FATAL_ERROR, "only support linux now!")
+    target_link_libraries(pingpongclient ws2_32 tyrantnet)
 endif()
