add broadcast example

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -1,15 +1,33 @@
 add_executable(pingpongserver pingpongserver.cc)
-if(UNIX)
+if(WIN32)
+    target_link_libraries(pingpongserver ws2_32 tyrantnet)
+    
+else()
     find_package(Threads REQUIRED)
     target_link_libraries(pingpongserver pthread tyrantnet)
-else(WIN32)
-    target_link_libraries(pingpongserver ws2_32 tyrantnet)
-endif(UNIX)
+endif(WIN32)
 
 add_executable(pingpongclient pingpongclient.cc)
-if(UNIX)
+if(WIN32)
+    target_link_libraries(pingpongclient ws2_32 tyrantnet)
+else()
     find_package(Threads REQUIRED)
     target_link_libraries(pingpongclient pthread tyrantnet)
+endif(WIN32)
+
+add_executable(broadcastserver broadcastserver.cc)
+if(WIN32)
+    target_link_libraries(broadcastserver ws2_32 tyrantnet)
 else()
-    target_link_libraries(pingpongclient ws2_32 tyrantnet)
-endif()
+    find_package(Threads REQUIRED)
+    target_link_libraries(broadcastserver pthread tyrantnet)
+endif(WIN32)
+
+add_executable(broadcastclient broadcastclient.cc)
+if(WIN32)
+    target_link_libraries(broadcastclient ws2_32 tyrantnet)
+else()
+    find_package(Threads REQUIRED)
+    target_link_libraries(broadcastclient pthread tyrantnet)
+endif(WIN32)
+
