--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,11 +1,10 @@
 add_executable(pingpongserver pingpongserver.cc)
 if(WIN32)
     target_link_libraries(pingpongserver ws2_32 tyrantnet)
-    
 elseif(UNIX)
     find_package(Threads REQUIRED)
     target_link_libraries(pingpongserver pthread tyrantnet)
-endif(WIN32)
+endif()
 
 add_executable(pingpongclient pingpongclient.cc)
 if(WIN32)
@@ -13,7 +12,7 @@ if(WIN32)
 elseif(UNIX)
     find_package(Threads REQUIRED)
     target_link_libraries(pingpongclient pthread tyrantnet)
-endif(WIN32)
+endif()
 
 add_executable(broadcastserver broadcastserver.cc)
 if(WIN32)
@@ -21,7 +20,7 @@ if(WIN32)
 elseif(UNIX)
     find_package(Threads REQUIRED)
     target_link_libraries(broadcastserver pthread tyrantnet)
-endif(WIN32)
+endif()
 
 add_executable(broadcastclient broadcastclient.cc)
 if(WIN32)
@@ -29,7 +28,7 @@ if(WIN32)
 elseif(UNIX)
     find_package(Threads REQUIRED)
     target_link_libraries(broadcastclient pthread tyrantnet)
-endif(WIN32)
+endif()
 
 add_executable(httpdownload httpdownload.cc)
 if(WIN32)
@@ -37,4 +36,4 @@ if(WIN32)
 elseif(UNIX)
     find_package(Threads REQUIRED)
     target_link_libraries(httpdownload pthread tyrantnet)
-endif(WIN32)
+endif()
