--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,5 +6,5 @@ if (WIN32)
 elseif(UNIX)
     find_package(Threads REQUIRED)
     target_link_libraries(test_timer pthread tyrantnet)
-endif(WIN32)
+endif()
 add_test(TestTimer test_timer)
