add prmisereceive example

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -30,10 +30,18 @@ elseif(UNIX)
     target_link_libraries(broadcastclient pthread tyrantnet)
 endif()
 
-add_executable(httpdownload httpdownload.cc)
+add_executable(httpdownload_test httpdownload_test.cc)
 if(WIN32)
-    target_link_libraries(httpdownload ws2_32 tyrantnet)
+    target_link_libraries(httpdownload_test ws2_32 tyrantnet)
 elseif(UNIX)
     find_package(Threads REQUIRED)
-    target_link_libraries(httpdownload pthread tyrantnet)
+    target_link_libraries(httpdownload_test pthread tyrantnet)
+endif()
+
+add_executable(promisereceive_test promisereceive_test.cc)
+if(WIN32)
+    target_link_libraries(promisereceive_test ws2_32 tyrantnet)
+elseif(UNIX)
+    find_package(Threads REQUIRED)
+    target_link_libraries(promisereceive_test pthread tyrantnet)
 endif()
