add websocket test

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -45,3 +45,11 @@ elseif(UNIX)
     find_package(Threads REQUIRED)
     target_link_libraries(promisereceive_test pthread tyrantnet)
 endif()
+
+add_executable(websocket_test websocket_test.cc)
+if(WIN32)
+    target_link_libraries(websocket_test ws2_32 tyrantnet)
+elseif(UNIX)
+    find_package(Threads REQUIRED)
+    target_link_libraries(websocket_test pthread tyrantnet)
+endif()
