--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,55 +1,55 @@
-add_executable(pingpongserver pingpongserver.cc)
+add_executable(PingPongServer PingPongServer.cc)
 if(WIN32)
-    target_link_libraries(pingpongserver ws2_32 tyrantnet)
+    target_link_libraries(PingPongServer ws2_32 tyrantnet)
 elseif(UNIX)
     find_package(Threads REQUIRED)
-    target_link_libraries(pingpongserver pthread tyrantnet)
+    target_link_libraries(PingPongServer pthread tyrantnet)
 endif()
 
-add_executable(pingpongclient pingpongclient.cc)
+add_executable(PingPongClient PingPongClient.cc)
 if(WIN32)
-    target_link_libraries(pingpongclient ws2_32 tyrantnet)
+    target_link_libraries(PingPongClient ws2_32 tyrantnet)
 elseif(UNIX)
     find_package(Threads REQUIRED)
-    target_link_libraries(pingpongclient pthread tyrantnet)
+    target_link_libraries(PingPongClient pthread tyrantnet)
 endif()
 
-add_executable(broadcastserver broadcastserver.cc)
+add_executable(BroadCastServer BroadCastServer.cc)
 if(WIN32)
-    target_link_libraries(broadcastserver ws2_32 tyrantnet)
+    target_link_libraries(BroadCastServer ws2_32 tyrantnet)
 elseif(UNIX)
     find_package(Threads REQUIRED)
-    target_link_libraries(broadcastserver pthread tyrantnet)
+    target_link_libraries(BroadCastServer pthread tyrantnet)
 endif()
 
-add_executable(broadcastclient broadcastclient.cc)
+add_executable(BroadCastClient BroadCastClient.cc)
 if(WIN32)
-    target_link_libraries(broadcastclient ws2_32 tyrantnet)
+    target_link_libraries(BroadCastClient ws2_32 tyrantnet)
 elseif(UNIX)
     find_package(Threads REQUIRED)
-    target_link_libraries(broadcastclient pthread tyrantnet)
+    target_link_libraries(BroadCastClient pthread tyrantnet)
 endif()
 
-add_executable(httpdownload_test httpdownload_test.cc)
+add_executable(TestHttp TestHttp.cc)
 if(WIN32)
-    target_link_libraries(httpdownload_test ws2_32 tyrantnet)
+    target_link_libraries(TestHttp ws2_32 tyrantnet)
 elseif(UNIX)
     find_package(Threads REQUIRED)
-    target_link_libraries(httpdownload_test pthread tyrantnet)
+    target_link_libraries(TestHttp pthread tyrantnet)
 endif()
 
-add_executable(promisereceive_test promisereceive_test.cc)
+add_executable(TestPromiseReceive TestPromiseReceive.cc)
 if(WIN32)
-    target_link_libraries(promisereceive_test ws2_32 tyrantnet)
+    target_link_libraries(TestPromiseReceive ws2_32 tyrantnet)
 elseif(UNIX)
     find_package(Threads REQUIRED)
-    target_link_libraries(promisereceive_test pthread tyrantnet)
+    target_link_libraries(TestPromiseReceive pthread tyrantnet)
 endif()
 
-add_executable(websocket_test websocket_test.cc)
+add_executable(BenchWebsocket BenchWebsocket.cc)
 if(WIN32)
-    target_link_libraries(websocket_test ws2_32 tyrantnet)
+    target_link_libraries(BenchWebsocket ws2_32 tyrantnet)
 elseif(UNIX)
     find_package(Threads REQUIRED)
-    target_link_libraries(websocket_test pthread tyrantnet)
+    target_link_libraries(BenchWebsocket pthread tyrantnet)
 endif()
