--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(tyrantnet)
 
 OPTION(TYRANTNET_BUILD_TYPE_DEBUG "Build tyrantnet in debug mode" ON)
 option(TYRANTNET_BUILD_EXAMPLES "Build tyrantnet examples" ON)
-option(TYRANTNET_BUILD_TESTINGS "Build tyrantnet testings" OFF)
+option(TYRANTNET_BUILD_TESTINGS "Build tyrantnet testings" ON)
 
 find_library(LIB_OPENSSL NAMES crypto ssl)
 if(LIB_OPENSSL)
@@ -101,7 +101,7 @@ if(TYRANTNET_BUILD_TESTINGS)
             add_subdirectory(tests)
         endif()
     elseif(UNIX)
-        if (CMAKE_COMPILER_IS_GNUCC AND CMAKE_CXX_COMPILER_VERSION VERSION_GREATER 7.0)
+        if (CMAKE_COMPILER_IS_GNUCC)
             add_subdirectory(tests)
         endif()
     endif()
