--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required (VERSION 2.8.9)
 project(tyrantnet)
 
-OPTION(TYRANTNET_BUILD_TYPE_DEBUG "Build tyrantnet in debug mode" ON)
+OPTION(TYRANTNET_BUILD_TYPE_DEBUG "Build tyrantnet in debug mode" OFF)
 option(TYRANTNET_BUILD_EXAMPLES "Build tyrantnet examples" ON)
-option(TYRANTNET_BUILD_TESTINGS "Build tyrantnet testings" ON)
+option(TYRANTNET_BUILD_TESTINGS "Build tyrantnet testings" OFF)
 
 find_library(LIB_OPENSSL NAMES crypto ssl)
 if(LIB_OPENSSL)
@@ -101,7 +101,7 @@ if(TYRANTNET_BUILD_TESTINGS)
             add_subdirectory(tests)
         endif()
     elseif(UNIX)
-        if (CMAKE_COMPILER_IS_GNUCC)
+		if (CMAKE_COMPILER_IS_GNUCC AND CMAKE_CXX_COMPILER_VERSION VERSION_GREATER 4.9)
             add_subdirectory(tests)
         endif()
     endif()
