add openssl switch

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,13 +4,16 @@ project(tyrantnet)
 OPTION(TYRANTNET_BUILD_TYPE_DEBUG "Build tyrantnet in debug mode" OFF)
 option(TYRANTNET_BUILD_EXAMPLES "Build tyrantnet examples" ON)
 option(TYRANTNET_BUILD_TESTINGS "Build tyrantnet testings" OFF)
+option(TYRANTNET_USE_OPENSSL "use openssl if found openssl" ON)
 
-find_library(LIB_OPENSSL NAMES crypto ssl)
-if(LIB_OPENSSL)
-	add_definitions(-DUSE_OPENSSL)
-	SET(CMAKE_EXE_LINKER_FLAGS  "${CMAKE_SHARED_LINKER_FLAGS} -Wl,--no-as-needed -ldl -lrt -lssl -lcrypto")
-elseif()
-	message("not found openssl")
+if(TYRANTNET_USE_OPENSSL)
+	find_library(LIB_OPENSSL NAMES crypto ssl)
+	if(LIB_OPENSSL)
+		add_definitions(-DUSE_OPENSSL)
+		SET(CMAKE_EXE_LINKER_FLAGS  "${CMAKE_SHARED_LINKER_FLAGS} -Wl,--no-as-needed -ldl -lrt -lssl -lcrypto")
+	elseif()
+		message(WARNING "not found openssl")
+	endif()
 endif()
 
 if(WIN32)
