modify CMakeLists.txt, add fPIC flag, search c/cc files automaticly.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,50 +29,22 @@ elseif(UNIX)
 	else()
 		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
 	endif()
+	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
+	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
 endif()
 
 set(LIBRARY_OUTPUT_PATH "${PROJECT_BINARY_DIR}/lib")
 
-set(net_src_list
-		${PROJECT_SOURCE_DIR}/src/tyrantnet/net/EventLoop.cc
-		${PROJECT_SOURCE_DIR}/src/tyrantnet/net/CurrentThread.cc
-		${PROJECT_SOURCE_DIR}/src/tyrantnet/net/TcpConnection.cc
-		${PROJECT_SOURCE_DIR}/src/tyrantnet/net/SocketLibFunction.cc
-		${PROJECT_SOURCE_DIR}/src/tyrantnet/net/TCPService.cc
-		${PROJECT_SOURCE_DIR}/src/tyrantnet/net/Connector.cc
-		${PROJECT_SOURCE_DIR}/src/tyrantnet/net/ListenThread.cc
-		${PROJECT_SOURCE_DIR}/src/tyrantnet/net/poller.c
-		${PROJECT_SOURCE_DIR}/src/tyrantnet/net/SSLHelper.cc
-		${PROJECT_SOURCE_DIR}/src/tyrantnet/net/Socket.cc
-		${PROJECT_SOURCE_DIR}/src/tyrantnet/net/SyncConnector.cc
-	)
-
-set(timer_src_list
-    ${PROJECT_SOURCE_DIR}/src/tyrantnet/timer/Timer.cc
-)
-
-set(http_src_list
-	${PROJECT_SOURCE_DIR}/src/tyrantnet/net/http/http_parser.c
-	${PROJECT_SOURCE_DIR}/src/tyrantnet/net/http/HttpParser.cc
-	${PROJECT_SOURCE_DIR}/src/tyrantnet/net/http/HttpService.cc
-	)
-
-set(common_src_list
-	${PROJECT_SOURCE_DIR}/src/tyrantnet/common/base64.cc
-	${PROJECT_SOURCE_DIR}/src/tyrantnet/common/md5calc.cc
-	${PROJECT_SOURCE_DIR}/src/tyrantnet/common/SHA1.cc
-	${PROJECT_SOURCE_DIR}/src/tyrantnet/common/stack.c
-	${PROJECT_SOURCE_DIR}/src/tyrantnet/common/array.c
-	${PROJECT_SOURCE_DIR}/src/tyrantnet/common/buffer.c
-	${PROJECT_SOURCE_DIR}/src/tyrantnet/common/app_status.c
-	${PROJECT_SOURCE_DIR}/src/tyrantnet/common/ox_file.cc
-	)
+file(GLOB_RECURSE ALL_SRC
+	${PROJECT_SOURCE_DIR}/src/*.cc
+	${PROJECT_SOURCE_DIR}/src/*.c)
 
 include_directories("${PROJECT_SOURCE_DIR}/src/")
 if(WIN32)
-	add_library(tyrantnet ${net_src_list} ${timer_src_list} ${http_src_list} ${common_src_list})
+	add_library(tyrantnet ${ALL_SRC})
+	set_target_properties(tyrantnet PROPERTIES OUTPUT_NAME_DEBUG "tyrantnetd")
 elseif(UNIX)
-	add_library(tyrantnet SHARED ${net_src_list} ${timer_src_list} ${http_src_list} ${common_src_list})
+	add_library(tyrantnet SHARED ${ALL_SRC})
 	find_package(Threads REQUIRED)
 	target_link_libraries(tyrantnet pthread)
 endif()
@@ -95,19 +67,19 @@ file(GLOB TYRANTNET_PORT_PUBLIC_HEADERS ${PROJECT_SOURCE_DIR}/src/tyrantnet/net/
 install(FILES ${TYRANTNET_PORT_PUBLIC_HEADERS} DESTINATION "include/tyrantnet/net/port")
 
 if(TYRANTNET_BUILD_EXAMPLES)
-    add_subdirectory(examples)
+	add_subdirectory(examples)
 endif()
 
 if(TYRANTNET_BUILD_TESTINGS)
-    if(WIN32)
-        if (MSVC_VERSION VERSION_GREATER 1910)
-            add_subdirectory(tests)
-        endif()
-    elseif(UNIX)
+	if(WIN32)
+		if (MSVC_VERSION VERSION_GREATER 1910)
+			add_subdirectory(tests)
+		endif()
+	elseif(UNIX)
 		if (CMAKE_COMPILER_IS_GNUCC AND CMAKE_CXX_COMPILER_VERSION VERSION_GREATER 4.9)
-            add_subdirectory(tests)
-        endif()
-    endif()
+			add_subdirectory(tests)
+		endif()
+	endif()
 endif()
 
 
