--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required (VERSION 2.8.9)
-project(tyrantnet)
+set(PRJECT_NAME tyrantnet)
+
+project(PRJECT_NAME C CXX)
 
 OPTION(TYRANTNET_BUILD_TYPE_DEBUG "Build tyrantnet in debug mode" OFF)
 option(TYRANTNET_BUILD_EXAMPLES "Build tyrantnet examples" ON)
@@ -12,7 +14,7 @@ if(TYRANTNET_USE_OPENSSL)
 		add_definitions(-DUSE_OPENSSL)
 		SET(CMAKE_EXE_LINKER_FLAGS  "${CMAKE_SHARED_LINKER_FLAGS} -Wl,--no-as-needed -ldl -lrt -lssl -lcrypto")
 	elseif()
-		message(WARNING "not found openssl")
+		message(AUTHOR_WARNING "not found openssl")
 	endif()
 endif()
 
@@ -22,8 +24,8 @@ elseif(UNIX)
 	if(TYRANTNET_BUILD_TYPE_DEBUG)
 		set(CMAKE_BUILD_TYPE "Release")
 	endif()
-	set(CMAKE_CXX_FLAGS_DEBUG   "-O0 -g -ggdb -Wall -D_DEBUG")
-	set(CMAKE_CXX_FLAGS_RELEASE "-O3 -g -ggdb -Wall -DNDEBUG")
+	set(CMAKE_CXX_FLAGS_DEBUG   "-O0 -g -ggdb -Wall -Werror -D_DEBUG")
+	set(CMAKE_CXX_FLAGS_RELEASE "-O3 -g -ggdb -Wall -Werror -DNDEBUG")
 	if (CMAKE_COMPILER_IS_GNUCC AND CMAKE_CXX_COMPILER_VERSION VERSION_LESS 7.0)
 		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 	else()
